--- a/overview.mdx
+++ b/overview.mdx
@@ -7,18 +7,6 @@ description: "Welcome to the slipstream API"
 <Tip>For inquiries, contact us at dev@oneslipstream.com</Tip>
 
 <CardGroup>
-
-<Card title="Consumer" icon="user" href="/consumer/create" />
-<Card title="Search" icon="magnifying-glass" href="/search/create" />
-<Card
-  title="Consumer Account"
-  icon="file-user"
-  href="/consumer-account/create"
-/>
-<Card
-  title="Account Event"
-  icon="calendar-days"
-  href="/account-event/creates"
-/>
-
+  <Card title="Consumers" icon="user" href="/consumers/create" /> 
+  <Card title="Search" icon="magnifying-glass" href="/searches/create" />
 </CardGroup>
