--- a/pages/overview.mdx
+++ b/pages/overview.mdx
@@ -7,6 +7,6 @@ description: "Welcome to the slipstream API"
 <Tip>For inquiries, contact us at dev@oneslipstream.com</Tip>
 
 <CardGroup>
-  <Card title="Consumers" icon="user" href="/consumers/create" /> 
-  <Card title="Search" icon="magnifying-glass" href="/searches/create" />
+  <Card title="Consumers" icon="user" href="/pages/consumers/create" /> 
+  <Card title="Search" icon="magnifying-glass" href="/pages/searches/create" />
 </CardGroup>
