--- a/pages/changelog/overview.mdx
+++ b/pages/changelog/overview.mdx
@@ -4,10 +4,7 @@ sidebarTitle: "Overview"
 ---
 
 ## v1.0.0
+<sub>22nd March 2023</sub>
 
-<sub>Posted by Connor Lurring 4 months ago</sub>
-
-- Added reporting events
-- Corrected joint account flag
-- Corrected behavioural naming
-- Added consumer account endpoints
+- Added consumer `create`, `retrieve`, `update` and `delete`
+- Added search `create`
