fix: overview page

--- a/pages/overview.mdx
+++ b/pages/overview.mdx
@@ -1,10 +1,12 @@
 ---
 sidebarTitle: "Overview"
-title: "Slipstream API"
-description: "Welcome to the slipstream API"
+title: "Documentation"
+description: "Slipstream provides a developer-friendly API to access credit bureau data."
 ---
 
-<Tip>For inquiries, contact us at dev@oneslipstream.com</Tip>
+We continously build as you build and your feedback is greatly appreciated.
+
+<Tip>For feedback or technical support, contact us at developers@oneslipstream.com</Tip>
 
 <CardGroup>
   <Card title="Consumers" icon="user" href="/pages/api/consumers/create" /> 
