--- a/pages/overview.mdx
+++ b/pages/overview.mdx
@@ -4,6 +4,6 @@ title: "Documentation"
 description: "Slipstream provides a developer-friendly API to access credit bureau data."
 ---
 
-We continously build as you build and your feedback is greatly appreciated.
+We are continuously building and improving our API. If you have any feedback or things you would like to see/improve, please let us know (We want to hear everything!).
 
 <Tip>For feedback or technical support, contact us at developers@oneslipstream.com</Tip>
