--- a/pages/changelog/overview.mdx
+++ b/pages/changelog/overview.mdx
@@ -6,5 +6,5 @@ sidebarTitle: "Overview"
 ## v1.0.0
 <sub>22nd March 2023</sub>
 
-- Added consumer `create`, `retrieve`, `update` and `delete`
-- Added search `create`
+- Added **Consumer** `create`, `retrieve`, `update` and `delete`
+- Added **Search**  `create`
