--- a/pages/changelog/overview.mdx
+++ b/pages/changelog/overview.mdx
@@ -6,7 +6,5 @@ sidebarTitle: "Overview"
 ## v1.0.0
 <sub>22nd March 2023</sub>
 
-- Added **Consumer** 
-  - `create`, `retrieve`, `update` and `delete`
-- Added **Search** 
-  - `create`
+- Added **Consumer** (`create`, `retrieve`, `update` and `delete`)
+- Added **Search** (`create`)
