chore: bold authentication text

--- a/pages/introduction/authentication.mdx
+++ b/pages/introduction/authentication.mdx
@@ -6,7 +6,7 @@ description: "The Slipstream API uses bearer token authentication. You can view 
 
 Sandbox API keys have the prefix `sk_test` and live API keys have the prefix `sk_live`.
 
-Your API keys are highly sensitive and provide full access to your platform and bureau data. Do not share your secret API keys in publicly accessible areas such as GitHub, client-side code, and so forth.
+**Your API keys are highly sensitive and provide full access to your platform and bureau data.** Do not share your secret API keys in publicly accessible areas such as GitHub, client-side code, and so forth.
 
 Authentication to the API is performed via Bearer auth. This requires setting the Authentication header, e.g. `-H "Authorization: Bearer sk_test_51MktQKLA3xH30J63kOdV0kAdOkV2KDBLQa6QD9mHJte3nSgzQaejxGo5Ub6qdl7DnCsStzsQfqilPgCXwy9yZkrp00jRlCwKbO"`
 
