chore: https wiki link auth

--- a/pages/introduction/authentication.mdx
+++ b/pages/introduction/authentication.mdx
@@ -10,5 +10,5 @@ Sandbox API keys have the prefix `sk_test` and live API keys have the prefix `sk
 
 Authentication to the API is performed via Bearer auth. This requires setting the Authentication header, e.g. `-H "Authorization: Bearer sk_test_51MktQKLA3xH30J63kOdV0kAdOkV2KDBLQa6QD9mHJte3nSgzQaejxGo5Ub6qdl7DnCsStzsQfqilPgCXwy9yZkrp00jRlCwKbO"`
 
-All API requests must be made over HTTPS. Calls made over plain HTTP will fail. API requests without authentication will also fail.
+All API requests must be made over [HTTPS](http://en.wikipedia.org/wiki/HTTP_Secure). Calls made over plain HTTP will fail. API requests without authentication will also fail.
 
