--- a/pages/introduction/errors.mdx
+++ b/pages/introduction/errors.mdx
@@ -8,3 +8,15 @@ Slipstream uses conventional HTTP response codes to indicate the success or fail
 In general: Codes in the `2xx` range indicate success. Codes in the `4xx` range indicate an error that failed given the information provided (e.g., a required parameter was omitted). Codes in the `5xx` range indicate an error with Slipstream's servers (these are rare).
 
 Most `4xx` errors can be handled programmatically. The error response will include a [code](#) that briefly explains the error reported.
+
+<RequestExample>
+```json
+{
+  "code": "INVALID_REQUEST",
+  "message": "The request is missing a required parameter, includes an invalid parameter value, includes a parameter more than once, or is otherwise malformed.",
+  "data": {
+    "param": "name"
+  }
+}
+```
+</RequestExample>
