--- a/pages/introduction/authentication.mdx
+++ b/pages/introduction/authentication.mdx
@@ -12,3 +12,10 @@ Authentication to the API is performed via Bearer auth. This requires setting th
 
 All API requests must be made over [HTTPS](http://en.wikipedia.org/wiki/HTTP_Secure). Calls made over plain HTTP will fail. API requests without authentication will also fail.
 
+<RequestExample>
+```bash cURL
+curl --request GET \
+  --url https://api.oneslipstream.com/v1/consumers \
+  --header "Authorization: Bearer sk_test_51MktQKLA3xH30J63kOdV0kAdOkV2KDBLQ" 
+```
+</RequestExample>
